<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity" >

    <TableLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="50sp"
            	android:textColor="@+drawable/button_text" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/scoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" >

        <TableRow
            android:id="@+id/labelRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/xLabel"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/xLabel"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/oLabel"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/oLabel"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/scoreRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/xScore"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="40sp"
                android:text="@string/x_win_count"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/oScore"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="40sp"
                android:text="@string/o_win_count"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="@android:string/cancel"
        android:text="@string/new_game" />

</RelativeLayout>
